Fix page scroll clipping

--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ ul {
 }
 
 main {
-  overflow: hidden;
+  overflow: visible;
 }
 
 .hero {
